fix bug where landing page image appears in front of the nav on mobile

--- a/src/app/_components/ResponsiveImage.module.css
+++ b/src/app/_components/ResponsiveImage.module.css
@@ -1,5 +1,6 @@
 .container {
     position: relative;
+    z-index: 0;
     width: 100%;
     height: 0;
     padding-bottom: 100%; /* 16:9 aspect ratio; adjust as needed */
